# Bootcamp-Python

./: README.md
Aula01/: desafio.py  exemplo_01.py  exemplo_02.py
Aula02/: desafio.py  exercicios.py
Aula03/: exercicios.py  main.py
Aula04/: arquivos.py  aula_algoritmo.py  data_science.py  exemplo.csv  exemplo_dic.py  exemplo_lista.py  exercicios.py
Aula06/: .flake8  main.py  pyproject.toml
